--- a/package.json
+++ b/package.json
@@ -13,22 +13,16 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bcoin": "1.0.2",
-    "bitcoinjs-message": "2.0.0",
-    "bs58": "^4.0.1",
-    "bufio": "0.2.0",
-    "secp256k1": "3.5.2"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.11.2",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^10.14.8",
     "@types/secp256k1": "^3.5.0",
     "mocha": "^5.2.0",
-    "node-gyp": "^3.8.0",
-    "ts-node": "^6.2.0",
-    "ts-node-dev": "^1.0.0-pre.30",
-    "tslint": "^5.11.0",
+    "node-gyp": "^4.0.0",
+    "ts-node": "^8.2.0",
+    "ts-node-dev": "^1.0.0-pre.39",
+    "tslint": "^5.17.0",
     "typescript": "3.0.1"
   }
 }
